添加环境变量设置 (#2157)
* Remove unused methods

* 添加环境变量设置

* update

* update