@@ -23,9 +23,7 @@ import org.jetbrains.annotations.NotNull;
 import java.io.File;
 import java.io.Serializable;
 import java.net.Proxy;
-import java.util.ArrayList;
-import java.util.Collections;
-import java.util.List;
+import java.util.*;
 
 /**
  *
@@ -42,6 +40,7 @@ public class LaunchOptions implements Serializable {
     private final List<String> overrideJavaArguments = new ArrayList<>();
     private final List<String> javaArguments = new ArrayList<>();
     private final List<String> javaAgents = new ArrayList<>(0);
+    private final Map<String, String> environmentVariables = new LinkedHashMap<>();
     private Integer minMemory;
     private Integer maxMemory;
     private Integer metaspace;
@@ -128,6 +127,10 @@ public class LaunchOptions implements Serializable {
     @NotNull
     public List<String> getJavaAgents() {
         return Collections.unmodifiableList(javaAgents);
+    }
+
+    public Map<String, String> getEnvironmentVariables() {
+        return environmentVariables;
     }
 
     /**
@@ -280,43 +283,6 @@ public class LaunchOptions implements Serializable {
         }
 
         /**
-         * The game directory
-         */
-        public File getGameDir() {
-            return options.gameDir;
-        }
-
-        /**
-         * The Java Environment that Minecraft runs on.
-         */
-        public JavaVersion getJava() {
-            return options.java;
-        }
-
-        /**
-         * Will shown in the left bottom corner of the main menu of Minecraft.
-         * null if use the id of launch version.
-         */
-        public String getVersionName() {
-            return options.versionName;
-        }
-
-        /**
-         * Will shown in the left bottom corner of the main menu of Minecraft.
-         * null if use Version.versionType.
-         */
-        public String getVersionType() {
-            return options.versionType;
-        }
-
-        /**
-         * Don't know what the hell this is.
-         */
-        public String getProfileName() {
-            return options.profileName;
-        }
-
-        /**
          * User custom additional minecraft command line arguments.
          */
         public List<String> getGameArguments() {
@@ -339,123 +305,6 @@ public class LaunchOptions implements Serializable {
 
         public List<String> getJavaAgents() {
             return options.javaAgents;
-        }
-
-        /**
-         * The minimum memory that the JVM can allocate.
-         */
-        public Integer getMinMemory() {
-            return options.minMemory;
-        }
-
-        /**
-         * The maximum memory that the JVM can allocate.
-         */
-        public Integer getMaxMemory() {
-            return options.maxMemory;
-        }
-
-        /**
-         * The maximum metaspace memory that the JVM can allocate.
-         * For Java 7 -XX:PermSize and Java 8 -XX:MetaspaceSize
-         * Containing class instances.
-         */
-        public Integer getMetaspace() {
-            return options.metaspace;
-        }
-
-        /**
-         * The initial game window width
-         */
-        public Integer getWidth() {
-            return options.width;
-        }
-
-        /**
-         * The initial game window height
-         */
-        public Integer getHeight() {
-            return options.height;
-        }
-
-        /**
-         * Is inital game window fullscreen.
-         */
-        public boolean isFullscreen() {
-            return options.fullscreen;
-        }
-
-        /**
-         * The server ip that will connect to when enter game main menu.
-         */
-        public String getServerIp() {
-            return options.serverIp;
-        }
-
-        /**
-         * i.e. optirun
-         */
-        public String getWrapper() {
-            return options.wrapper;
-        }
-
-        /**
-         * Proxy settings
-         */
-        public Proxy getProxy() {
-            return options.proxy;
-        }
-
-        /**
-         * The user name of the proxy, optional.
-         */
-        public String getProxyUser() {
-            return options.proxyUser;
-        }
-
-        /**
-         * The password of the proxy, optional
-         */
-        public String getProxyPass() {
-            return options.proxyPass;
-        }
-
-        /**
-         * Prevent game launcher from generating default JVM arguments like max memory.
-         */
-        public boolean isNoGeneratedJVMArgs() {
-            return options.noGeneratedJVMArgs;
-        }
-
-        /**
-         * Called command line before launching the game.
-         */
-        public String getPreLaunchCommand() {
-            return options.preLaunchCommand;
-        }
-
-        public NativesDirectoryType getNativesDirType() {
-            return options.nativesDirType;
-        }
-
-        public String getNativesDir() {
-            return options.nativesDir;
-        }
-
-        public Renderer getRenderer() {
-            return options.renderer;
-        }
-
-        public boolean isUseNativeGLFW() {
-            return options.useNativeGLFW;
-        }
-
-        public boolean isUseNativeOpenAL() {
-            return options.useNativeOpenAL;
-        }
-
-        public boolean isDaemon() {
-            return options.daemon;
         }
 
         public Builder setGameDir(File gameDir) {
@@ -504,6 +353,12 @@ public class LaunchOptions implements Serializable {
         public Builder setJavaAgents(List<String> javaAgents) {
             options.javaAgents.clear();
             options.javaAgents.addAll(javaAgents);
+            return this;
+        }
+
+        public Builder setEnvironmentVariables(Map<String, String> env) {
+            options.environmentVariables.clear();
+            options.environmentVariables.putAll(env);
             return this;
         }
 
